# alliance-evraz-30-telegram-bot-llm-adapters

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.in  requirements.txt
alliance_evraz_30_telebot/: bot.py
alliance_evraz_30_telebot/adapters/: file_storage.py
alliance_evraz_30_telebot/constants/: excludes.py  prompts.py
alliance_evraz_30_telebot/entryponts/: entrypoint.py
alliance_evraz_30_telebot/services/: process_file.py
llm_service/: entrypoint.py  llm.py  prompts.py  services.py
src/: bootstrap.py  config.py  enums.py  foo.py  main.py  utils.py
src/adapters/repos/: context_repo.py  lllm_adapter.py  project_repo.py  prompt_repo.py
src/adapters/routers/: context_router.py  project_router.py
src/domain/: context.py  project.py  prompt.py  recommendation.py
src/last/: foo.py  module_analys.py  prompts.py  services.py
src/llm_service/: entrypoint.py  prompts.py  services.py
src/services/: context_service.py  project_services.py  prompt_services.py  startup_services.py
tests/: test_context_router.py  test_llm_adapter.py  test_project_router.py
